fix: improved grid alignment for image rules list

--- a/pages/main.css
+++ b/pages/main.css
@@ -246,8 +246,8 @@ a:hover {
   box-shadow: 0 6px 10px rgb(153 153 153 / 25%);
 }
 .image-rules{
-  width: 90%;
-  height: 90%;
+  width: 100%;
+  height: 100%;
   border-radius: 50%;
   margin: 0 auto;
   display: block;
